// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateName rejects empty input '   ' 1`] = `
<FormattedMessage
  defaultMessage="Name is required."
  id="xpack.remoteClusters.form.errors.nameMissing"
  values={Object {}}
/>
`;

exports[`validateName rejects empty input 'null' 1`] = `
<FormattedMessage
  defaultMessage="Name is required."
  id="xpack.remoteClusters.form.errors.nameMissing"
  values={Object {}}
/>
`;

exports[`validateName rejects empty input 'undefined' 1`] = `
<FormattedMessage
  defaultMessage="Name is required."
  id="xpack.remoteClusters.form.errors.nameMissing"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters ' ' 1`] = `
<FormattedMessage
  defaultMessage="Name is required."
  id="xpack.remoteClusters.form.errors.nameMissing"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '!' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '#' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '$' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '%' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '&' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '(' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters ')' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '*' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '+' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters ',' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '.' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '<' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '>' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '?' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '@' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;

exports[`validateName rejects invalid characters '^' 1`] = `
<FormattedMessage
  defaultMessage="Name contains invalid characters."
  id="xpack.remoteClusters.form.errors.illegalCharacters"
  values={Object {}}
/>
`;
